8/10/2022 version 0.2-8:

fixing more compiler warnings:

- removed UTF-8 characters from comments
- fixed an error in sade.cc, where function was taking ints when it should be doubles
- fixed "address of stack memory associated with local variable 'output' returned" warnings

26/3/2022 version 0.2-7:

- removed unary_function and binary_function, which are deprecated

16/9/2019 version 0.2-6:

- made C++11 a requirement, to use C99 code in C++
- fixed useDynLib roxygen issue
- changed deprecated things: 
  * changed auto_ptr to unique_ptr
  * simply removed ptr_fun (passing functions directly as arguments now, no lambda needed)
  * replaced bind2nd with bind
- fixed a PROTECT error in RmalschainsEvaluate.h
- fixed some gcc9 errors

13/3/2019 version 0.2-5:

- fixed a warning

28/4/2018 version 0.2-4:

- fixed a warning and some other CRAN issues

29/11/2016 version 0.2-3:

- fixed a clang compiler bug as follows:

newmat6.cpp:431:13: error: ordered comparison between pointer and zero ('int *' and 'int')
   if (indx > 0) { delete [] indx; indx = 0; }
       ~~~~ ^ ~

- added CITATION file to include JSS paper
- some more changes to pass CRAN checks


30/03/2014 version 0.2-2:

- changed defaults: maxEval=10*istep, optimum=-Inf
- replaced seq(x, x, length=y) in demos by rep(x, y)
- made the cmaes parameters lambda and mu available in the user interface
- the function now returns more information, and the result is of type "malschains"
- removed a needless extern "C"

10/05/2013 version 0.2-1:

- disabled restarting because it may yield to a result of 0 fitness and causes R to crash in Windows x64
- added a comment for the original cmaes code in the LICENSE file

02/05/2013 version 0.2: 

- the local searches are directly accessible
- the external pointer calling mechanism now uses an environment
- seed in cmaes can now be fixed
- depend on Rcpp 0.9.10
- roxygen2 is used
- trace=FALSE now really mutes the algorithm
