@@ -18,14 +18,14 @@ Description: An implementation of an algorithm family for continuous
     (MA-LS-Chains). Memetic algorithms are hybridizations of genetic
     algorithms with local search methods. They are especially suited
     for continuous optimization.
-Version: 0.2-8
+Version: 0.2-9
 Depends: Rcpp (>= 0.9.10)
 Suggests: inline
 Encoding: UTF-8
 Collate: 'malschains.R' 'Rmalschains-package.R'
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Packaged: 2022-10-08 08:01:22 UTC; cbergmei
+Packaged: 2023-01-17 00:00:56 UTC; bergmeir
 Author: Christoph Bergmeir [aut, cre, cph],
   José M. Benítez [ths],
   Daniel Molina [aut, cph],
@@ -36,4 +36,4 @@ Author: Christoph Bergmeir [aut, cre, cph],
   Nikolaus Hansen [ctb, cph] (Author of the original cmaes implementation
     that ships with the package)
 Repository: CRAN
-Date/Publication: 2022-10-09 06:30:05 UTC
+Date/Publication: 2023-01-17 08:30:03 UTC
