@@ -1,3 +1,7 @@
+16/1/2023 version 0.2-9:
+
+- replacing sprintf with snprintf
+
 8/10/2022 version 0.2-8:
 
 fixing more compiler warnings:
